--- a/package.json
+++ b/package.json
@@ -9,10 +9,5 @@
   },
   "keywords": [],
   "author": "Hans McMurdy",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1",
-    "lodash": "^4.17.15",
-    "socket.io": "^2.3.0",
-  }
+  "license": "MIT"
 }
